--- a/packages/ui/pagination/src/index.less
+++ b/packages/ui/pagination/src/index.less
@@ -4,24 +4,25 @@
     .ant-pagination-item,
     .ant-pagination-next,
     .ant-pagination-prev {
-        border: 1px solid var(--color-gray-5);
+        border: 1px solid var(--pagination-item-border-color);
 
         &:hover {
-            background-color: var(--color-gray-3);
+            background-color: var(--pagination-item-hover-bg);
+            border: 1px solid var(--pagination-item-hover-border-color);
 
             a {
-                color: var(--theme-text-color);
+                color: var(--pagination-item-hover-color);
             }
         }
     }
 
     .ant-pagination-item-active,
     .ant-pagination-item-active:hover {
-        border-color: var(--color-brand-1);
-        background: var(--color-brand-1);
+        border-color: var(--pagination-item-active-border-color);
+        background: var(--pagination-item-active-bg);
 
         a {
-            color: var(--color-brand-7);
+            color: var(--pagination-item-active-color);
         }
     }
 
