--- a/packages/ui/checkbox/src/index.less
+++ b/packages/ui/checkbox/src/index.less
@@ -2,48 +2,48 @@
 
 .@{osui-checkbox-class-prefix},
 .@{osui-checkbox-class-prefix}-group .ant-checkbox-group-item {
-    // 没选中时hover的效果
+    // 没选中时hover的效果 normal + hover
     &.ant-checkbox-wrapper:hover .ant-checkbox-inner,
     .ant-checkbox:hover .ant-checkbox-inner,
     .ant-checkbox-input:focus + .ant-checkbox-inner {
-        border-color: var(--theme-border-color-base);
-        background-color: var(--color-gray-3);
+        border-color: var(--checkbox-hover-border-color);
+        background-color: var(--checkbox-hover-bg);
     }
-    // 没选中且focus时的hover效果
+    // 没选中且focus时的hover效果 normal + focus + hover
     &.ant-checkbox-wrapper:hover :not(.ant-checkbox-checked) .ant-checkbox-input:focus + .ant-checkbox-inner,
     .ant-checkbox:not(.ant-checkbox-checked):hover .ant-checkbox-input:focus + .ant-checkbox-inner {
-        background-color: var(--color-gray-3);
+        background-color: var(--checkbox-hover-bg);
     }
     // focus时的效果
     .ant-checkbox-input:focus + .ant-checkbox-inner {
-        background-color: var(--color-gray-1);
+        background-color: var(--checkbox-focus-bg);
     }
     // 选中focus时的效果
     .ant-checkbox-checked .ant-checkbox-input:focus + .ant-checkbox-inner {
-        border-color: var(--theme-border-color-base);
-        box-shadow: 0 0 0 1px var(--theme-border-focus-color);
+        box-shadow: var(--checkbox-checked-focus-box-shadow);
     }
+
     // 选中hover且focus时的效果
     &.ant-checkbox-wrapper:hover .ant-checkbox-checked .ant-checkbox-inner,
     .ant-checkbox-checked:hover .ant-checkbox-inner,
-    .ant-checkbox-checked .ant-checkbox-input:focus + .ant-checkbox-inner {
-        background-color: var(--theme-primary-color);
+    .ant-checkbox-checked .ant-checkbox-input:focus+.ant-checkbox-inner {
+        background-color: var(--checkbox-checked-focus-bg);
     }
 
     .ant-checkbox-inner,
     .ant-checkbox-checked::after {
-        border-color: var(--theme-border-color-base);
         animation: none;
         animation-fill-mode: none;
         transition: none;
     }
 
     .ant-checkbox-disabled .ant-checkbox-inner {
-        background-color: #fff;
+        background-color: var(--checkbox-disabled-bg);
     }
 
-    .ant-checkbox-checked .ant-checkbox-inner::after {
-        transition: none;
+    &.ant-checkbox-wrapper:hover .ant-checkbox-disabled .ant-checkbox-inner,
+    .ant-checkbox-disabled:hover .ant-checkbox-inner {
+        background-color: var(--checkbox-disabled-bg);
     }
 
     &-group {
@@ -55,7 +55,7 @@
         }
 
         .ant-checkbox-disabled .ant-checkbox-inner {
-            background-color: #fff;
+            background-color: var(--checkbox-disabled-bg);
         }
     }
 }
