--- a/packages/ui/radio/src/index.less
+++ b/packages/ui/radio/src/index.less
@@ -4,41 +4,41 @@
     // 没选中时hover的效果
     .ant-radio-wrapper:hover .ant-radio,
     .ant-radio:hover .ant-radio-inner {
-        border-color: var(--theme-border-color-base);
-        background: var(--color-gray-3);
+        border-color: var(--radio-hover-border-color);
+        background: var(--radio-hover-bg);
     }
 
     // checked时hover border的颜色
     .ant-radio-wrapper:hover .ant-radio-checked.ant-radio,
     .ant-radio-checked.ant-radio:hover .ant-radio-inner {
-        border-color: var(--color-brand-5);
+        border-color: var(--radio-checked-color);
     }
 
     // checked时hover border的颜色
     .ant-radio-checked:not(.ant-radio-disabled):hover::after {
-        border-color: var(--color-brand-5);
+        border-color: var(--radio-checked-color);
     }
 
     // checked时hover里面点的颜色
     .ant-radio-checked:not(.ant-radio-disabled):hover .ant-radio-inner::after {
-        background-color: var(--color-brand-5);
+        background-color: var(--radio-checked-color);
     }
 
     // disable时hover的效果
     .ant-radio-disabled:hover .ant-radio-inner,
     .ant-radio-disabled .ant-radio-inner,
     .ant-radio-button-disabled {
-        border-color: var(--theme-disabled-bg) !important;
-        background-color: var(--color-gray-1);
+        border-color: var(--radio-disabled-border-color) !important;
+        background-color: var(--radio-disabled-bg);
     }
 
     // disable时checked的效果
     .ant-radio-disabled.ant-radio-checked::after {
-        border-color: var(--theme-disabled-bg);
+        border-color: var(--radio-disabled-border-color);
     }
 
     .ant-radio.ant-radio-checked:not(.ant-radio-disabled):focus .ant-radio-inner {
-        box-shadow: 0 0 0 1px var(--theme-border-focus-color);
+        box-shadow: var(--theme-component-focus-box-shadow);
     }
 
     // 去除动画
@@ -58,9 +58,9 @@
         }
 
         .ant-radio-button-wrapper-disabled {
-            color: var(--theme-disabled-color);
-            background: var(--color-gray-1);
-            border-color: var(--color-gray-4);
+            color: var(--radio-button-disabled-color);
+            background: var(--radio-button-disabled-bg);
+            border-color: var(--radio-button-disabled-border-color);
         }
     }
 }
