--- a/packages/ui-theme/osui-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/osui-theme/src/antd-vars-patch.less
@@ -206,6 +206,7 @@
 // ---
 @radio-focus-shadow: 0 0 0 1px var(--theme-border-focus-color);
 @radio-duration: 0;
+@radio-button-hover-color: var(--radio-button-hover-color);
 
 // Modal
 // ---
