fix: modal icloud theme 调整

--- a/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
@@ -214,6 +214,7 @@
 @modal-header-bg: var(--modal-header-bg);
 @modal-header-close-size: var(--modal-header-close-size);
 @modal-header-border-color-split: var(--modal-header-bg);
-@modal-footer-padding-vertical: 20px;
+@modal-body-padding: 30px 0;
+@modal-footer-padding-vertical: 15px;
 @modal-footer-padding-horizontal: 20px;
 @modal-confirm-body-padding: 40px 30px 15px 30px;
