--- a/packages/ui/modal/src/index.less
+++ b/packages/ui/modal/src/index.less
@@ -10,6 +10,15 @@
         padding: var(--modal-padding);
     }
 
+    .ant-modal-body {
+        border-bottom: var(--modal-body-border-bottom);
+        margin: var(--modal-body-margin);
+    }
+
+    .ant-modal-footer {
+        border-top: var(--modal-footer-border-top);
+    }
+
     // no-border
     &-no-border {
         .ant-modal-title {
