--- a/packages/ui-theme/osui-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/osui-theme/src/antd-vars-patch.less
@@ -213,6 +213,7 @@
 @modal-header-bg: var(--modal-header-bg);
 @modal-header-close-size: var(--modal-header-close-size);
 @modal-header-border-color-split: var(--modal-header-bg);
+@modal-body-padding: @padding-lg;
 @modal-footer-padding-vertical: 24px;
 @modal-footer-padding-horizontal: 24px;
 @modal-confirm-body-padding: 40px 30px 15px 30px;
