--- a/packages/ui/message/src/index.less
+++ b/packages/ui/message/src/index.less
@@ -1,9 +1,11 @@
 @osui-message-class-prefix: osui-message;
 
 .@{osui-message-class-prefix} {
-    .ant-message-notice-content {
-        box-shadow: 0 4 8px -2px rgba(9, 30, 66, .25), 0 0 1px 0 rgba(9, 30, 66, .31);
-        border-radius: 4px;
+
+    &-alert {
+        .ant-message-notice-content {
+            padding: 0;
+        }
     }
 
     .osui-icon {
