fix: popover icloud theme调整

--- a/packages/ui/popover/src/index.less
+++ b/packages/ui/popover/src/index.less
@@ -2,6 +2,8 @@
 
 .@{osui-popover-class-prefix} {
     color: var(--theme-text-color);
+    font-size: var(--popover-font-size);
+    line-height: var(--popover-line-height);
 
     .ant-popover-content {
         max-width: 400px;
