fix: tabs icloud theme 调整

--- a/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
@@ -218,3 +218,7 @@
 @modal-footer-padding-vertical: 15px;
 @modal-footer-padding-horizontal: 20px;
 @modal-confirm-body-padding: 40px 30px 15px 30px;
+
+// Tabs
+// ---
+@tabs-horizontal-margin: 0 40px 0 0;
