--- a/packages/ui-theme/osui-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/osui-theme/src/antd-vars-patch.less
@@ -217,3 +217,7 @@
 @modal-footer-padding-vertical: 24px;
 @modal-footer-padding-horizontal: 24px;
 @modal-confirm-body-padding: 40px 30px 15px 30px;
+
+// Tabs
+// ---
+@tabs-horizontal-margin: 0 32px 0 0;
