fix: modal, switch icloud-theme样式修复

--- a/packages/ui/modal/src/index.less
+++ b/packages/ui/modal/src/index.less
@@ -12,7 +12,7 @@
 
     .ant-modal-body {
         border-bottom: var(--modal-body-border-bottom);
-        margin: var(--modal-body-margin);
+        padding: var(--modal-body-padding);
     }
 
     .ant-modal-footer {
