--- a/packages/ui/switch/src/index.less
+++ b/packages/ui/switch/src/index.less
@@ -3,6 +3,10 @@
 .@{osui-switch-class-prefix} {
     &.ant-switch {
         min-width: var(--switch-min-width);
+
+        &.ant-switch-small {
+            min-width: 28px;
+        }
     }
 
     &.ant-switch-disabled {
