--- a/packages/ui/popover/src/index.less
+++ b/packages/ui/popover/src/index.less
@@ -11,14 +11,14 @@
     }
 
     .ant-popover-title {
-        padding: 16px 16px 0 16px;
+        padding: var(--popover-title-padding);
         margin-bottom: -8px;
         border: none;
         font-size: 16px;
     }
 
     .ant-popover-inner-content {
-        padding: 16px;
+        padding: var(--popover-inner-content-padding);
         color: var(--theme-text-color);
     }
 }
