fix: table icloud-theme样式修复

--- a/packages/ui/table/src/index.less
+++ b/packages/ui/table/src/index.less
@@ -4,4 +4,8 @@
     .ant-table-thead {
         font-size: 12px;
     }
+
+    .ant-table-thead .ant-table-cell:not(:last-child) {
+        border-right: var(--table-header-cell-border-right);
+    }
 }
