fix: 修复select arrow的样式覆盖, 不影响search

--- a/packages/ui/select/src/index.less
+++ b/packages/ui/select/src/index.less
@@ -31,7 +31,7 @@
         }
     }
 
-    &.ant-select-open .ant-select-arrow:not(.ant-select-arrow-loading) svg {
+    &.ant-select-open .ant-select-arrow:not(.ant-select-arrow-loading) > svg {
         transform: var(--select-arrow-open-transform-rotate);
     }
 
